add the contact us layout

--- a/server/frontend/static/style.css
+++ b/server/frontend/static/style.css
@@ -5,6 +5,17 @@ img{
 
 .card{
   border: rgb(103, 102, 105) 3px solid;
+  display: flex;
+  flex-direction: column;
+  margin-left:5%;
+  margin-right:5%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+
+.card-rounded {
+  border: rgb(103, 102, 105) 1px solid;
+  border-radius: 25px;
   display: flex;  
   flex-direction: column;
   margin-left:5%;
